Attempt to fix nav on mobile

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -207,8 +207,10 @@ input[type=submit]:hover {
 
 @media all and (max-width: 750px) {
 	.navigation-list {
-		display: flex;
-		flex-shrink: 1;
+		list-style-type: none;
+		margin: 0;
+		padding: 0;
+		width: 200px;
 	}
 }
 
